--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <!-- Comparison Section -->
 <div class="compare-section mt-4">
-    <h3 class="text-center">Compare bikes / Scooters</h3>
-    <p class="fs-5 text-center">Please select minimum two models for comparison</p>
+    <h3 class="text-center text-sm-center">Compare bikes / Scooters</h3>
+    <p class="fs-5 text-center text-sm-center">Please select minimum two models for comparison</p>
 
     <div class="row  g-2 g-md-4">
         <div class="col-sm-6 noneMobile col-lg-3 col-12">
